--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,12 @@
 	scroll-behavior: smooth;
 	box-sizing: border-box;
 }
+html{
+	position: relative;
+	min-height: 100%;
+}
 body {
 	margin: 0;
 	padding: 0;
+
 }
